# Blogs

./: .gitignore  add_role.py  main.py  pyproject.toml  ruff.toml  set_admin.py  wsgi.py
alembic/: env.py
alembic/versions/: 7cca08d30055_init.py  ad436acb7a82_add_article.py  b9688becc186_init.py
blueprints/: article.py  user.py
data/: __all_models.py  article.py  db_session.py  role.py  user.py  utils.py
db/: blogs.db
forms/: article.py  login.py  register.py
resources/article/: parser.py  resourse.py
resources/user/: __init__.py  list_resourse.py  parser.py  resourse.py
templates/: article.html  auto_answer.html  base.html  distribution.html  error.html  index.html  job.html  professions.html  register.html  table.html  view_article.html
